--- a/placement/questions/templates/questions/index.html
+++ b/placement/questions/templates/questions/index.html
@@ -9,14 +9,15 @@
             <!-- <button class="voice-search item"></button> -->
         </form> 
     </div>
+    <div class="index_text_block"><span class="index_text">We have interview questions asked by:</span></div>
     <div class="company_card_container" >
         {% for company in companies %}
-        <div class="company_card">
-            <a href="{% url 'company_questions' company.name %}">
-                <div><img src="{{company.logo.url}}" class="index_company_logo"></div>
-                <!-- <div class="company_name_block"><span class="company_name_text">{{company.name}}</span></div> -->
-            </a>
-        </div>
+        <a href="{% url 'company_questions' company.name %}" class="company_card_link">
+            <div class="company_card">
+                <div class = "company_logo_block"><img src="{{company.logo.url}}" class="index_company_logo"></div>
+                <div class="company_name_block"><span class="company_name_text">{{company.name}}</span></div>
+            </div>
+        </a>
         {% endfor %}
     </div>
 </div>
