--- a/placement/questions/templates/questions/layout.html
+++ b/placement/questions/templates/questions/layout.html
@@ -6,8 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questionnaire</title>
     <link href="{% static 'style.css' %}" rel="stylesheet">
+    <script src="{% static 'scripts.js' %}"></script>
 </head>
 <body class="mainbody">
+    <div class="nav-bar">
+        <div class="nav-logo-block">
+            <img class="nav-logo" src="{% static 'logo_nobg.png' %}" alt="logo">
+        </div>
+        <div class="nav-links">
+            <div class="nav-home-link">
+                <a href="{% url 'index' %}"><span>Home</span></a>
+            </div>
+            <div class="nav-add-company">
+                <a href="{% url 'add_company' %}"><span>Add Company</span></a>
+            </div>
+            <div class="nav-add-question">
+                <a href="{% url 'login' %}"><span>Add Question</span></a>
+            </div>
+            <div class="nav-about-us">
+                <a href="{% url 'login' %}"><span>About Us</span></a>
+            </div>
+        </div>
+    </div>
     {% block content %}
     {% endblock %}
 </body>
