Add Company page

--- a/placement/questions/static/style.css
+++ b/placement/questions/static/style.css
@@ -304,10 +304,12 @@
     color: rgb(240, 235, 204);
     font-size: 20px;
     transition: all 0.2s ease-in-out;
+    border: 2px solid transparent;
 }
 .login_submit_btn:hover, .register_submit_btn:hover{
     background-color: rgb(89, 147, 224);
-    
+    border: 1px solid rgb(240, 235, 204);
+    font-size: 21px;
 }
 .login_submit_btn:focus, .register_submit_btn:focus{
     font-size: 22px;
@@ -351,6 +353,8 @@
     background-attachment: fixed;
     background-size: cover;
     /* text-align: center; */
+    
+    
 }
 .mainbody::-webkit-scrollbar {
     height: 6px;
@@ -593,8 +597,9 @@ input[type="search"]::-webkit-search-results-decoration {
     border-radius: 20px;
     border:1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-    max-width: 200px;
-    min-width: 100px;
+    width: 200px;
+    height: 75px;
+    /* min-width: 100px; */
     display: flex;
     align-items: center;
     transition: background-color 0.5s ease-in-out;
@@ -619,13 +624,14 @@ input[type="search"]::-webkit-search-results-decoration {
     /* border: 1px solid red; */
     font-size: 20px;
     font-family: 'Platypi';
-    color: rgb(174, 205, 236)
+    color: rgb(174, 205, 236);
+
     
 }
 .index_company_logo{
     /* border: 1px solid red; */
-    width: 100%;
-    height: 100%;
+    width: 50px;
+    height: 50px;
     /* margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
@@ -652,16 +658,31 @@ input[type="search"]::-webkit-search-results-decoration {
     align-items: center;
     gap: 30px;
     padding: 20px;
+ 
+}
+.add_company_heading{
+    /* border-bottom: 3px solid transparent; */
+    /* transform: translate(0, 40%); */
+    /* height: 47px; */
+    /* margin-bottom: -10px; */
+    background: linear-gradient(lightblue, transparent);
+    padding: 10px;
+    padding-bottom: 20px;
+    border-radius: 10px;
 }
 .add_company_heading span{
     background: repeating-linear-gradient(135deg, rgb(0,0,0) 0px, rgb(0,0,0) 10px,transparent 10px, transparent 11px),
     repeating-linear-gradient(22.5deg, rgb(0,0,0) 0px, rgb(0,0,0) 10px,transparent 10px, transparent 11px),
     linear-gradient(90deg, hsl(194,74%,56%),hsl(266,74%,56%),hsl(338,74%,56%),hsl(50,74%,56%),hsl(122,74%,56%)); 
-    
+    /* background: linear-gradient(135deg, lightblue , black 70%); */
+    /* text-shadow: -2px -2px black, -2px -1px black, -2px 0px black, -2px 1px black, -2px 2px black, -1px -2px black, -1px -1px black, -1px 0px black, -1px 1px black, -1px 2px black, 0px -2px black, 0px -1px black, 0px 1px black, 0px 2px black, 1px -2px black, 1px -1px black, 1px 0px black, 1px 1px black, 1px 2px black, 2px -2px black, 2px -1px black, 2px 0px black, 2px 1px black, 2px 2px black ; */
+    /* color: lightblue; */
+    text-decoration: underline !important;
     background-clip: text !important;
     -webkit-background-clip: text !important;
     -webkit-text-fill-color: transparent;
-    
+    /* border-bottom: 2px solid black; */
+     
     font-family: 'Ubuntu-Large';
     font-size: 6vw;
     
@@ -693,40 +714,114 @@ input[type="search"]::-webkit-search-results-decoration {
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    gap: 10px;
+    gap: 15px;
     /* border: 1px solid red; */
     width: 100%;
 }
 
 .Cform label{
-    color: white;
-    font-family: 'Ubuntu-Light';
-    
+    color: rgb(185, 227, 241);
+    font-family: 'Ubuntu-Medium';
+    padding-left: 2px;
+    margin-left: 20px;
+    /* border-bottom: 2px solid blue; */
+    /* text-decoration-color: black !important; */
 } 
 .Cform input{
-    width: 90%;
+    width: 80%;
     height: 30px;
     border-radius: 4px;
     padding: 3px;
+    margin-left: 20px;
     padding-top: 5px;
     font-size: 1.2rem;
     font-family: 'Acme-Regular';
     padding-inline-start: 10px;
     outline: none;
-    transform: translate(0%, -20%)
-
+    transform: translate(0%, -20%);
+    background-color: #595858;
+    color: white;
+    border: 2px solid transparent;
 }
 
-
-.Cform_name::placeholder{
+.Cform input::placeholder{
     font-size: 1.2rem;
     font-family: 'Acme-Regular';
+    color: hsla(0, 1%, 69%, 0.5);
+}
+.custom-file-input {
+    position: relative;
+    display: inline-block;
+    /* overflow: hidden; */
+    background-color: #595858;
+    /* background-color: #f0f0f0; */
+    padding: 10px;
+    border-radius: 5px;
+    height: 18px;
+    width: 96% !important; 
+    margin-right: 20px;
+    /* border:1px solid red; */
+    overflow: hidden;
+    transition: all 0.5s ease-in-out; 
+}
+
+
+#file-label {
+    /* transform: translate(-10%, -15%); */
+    transition: all 0.5s ease; 
+    /* font-size: 20px; */
+    position: absolute;
+    z-index: 1;
+    left: 28px;
+    font-size: 1.2rem;
+    font-family: 'Acme-Regular';
+    color: hsl(0, 1%, 69%);
+    opacity: 0.5;
+    padding:5px;
+    overflow-y: scroll;
+    width: 65%;
+    height: 25px !important;
+    /* border: 1px solid red; */
+    /* width: 60% !important;  */
+    /* margin-left: 20px; */
+}
+
+.Cform_logo_container{
+    width: 70% !important;
+    margin-left: 20px;
+}
+.Cform_logo_container:hover #file-label{
+    font-size: 1.3rem;
+    color: hsla(0, 1%, 69%, 1);
+}
+.Cform_logo_container:hover .custom-file-input{
+    border: 1px solid #ccc;
 }
 .Cform_logo{
-    
+    /* border:1px solid red !important; */
+    margin-left: -10px !important;
+    background-color: transparent !important;
+    border: 2px solid transparent !important;
+    position: absolute;
+    margin-top: 15px;
+    /* border: 1px solid red; */
+    width: 100% !important;
+    opacity: 0;
+    z-index: 4;
 }
 .Cform_description{
-
+    width: 85%;
+    margin-left: 20px;
+    background-color: black;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    background-color: #595858;
+    color: white;
+    border: 2px solid transparent;
+    font-family: 'Acme-Regular';
+    padding: 5px;
+    font-size: 1.1em;
+    outline: none;
 }
 .Cform_website{
 
@@ -763,4 +858,12 @@ input[type="search"]::-webkit-search-results-decoration {
     border: 2px solid rgb(99, 197, 230);
 }
 
-
+.Cform_name_warning{
+    color: red;
+    
+    font-family: 'Ubuntu-Light';
+    font-size: 12px;
+    margin-left: 23px;
+    margin-top: -15px;
+    display: none;
+}
